...
    },
    "Add exercise" : {
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Добавить упражнение"
          }
        }
      }
    },
    "Add set" : {
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Добавить подход"
          }
        }
      }
    },
    "Added: %@." : {
      "localizations" : {
...
    },
    "Analytics" : {
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Аналитика"
          }
        }
      }
    },
    "At least two workouts are needed" : {
      "localizations" : {
...
    },
    "Done" : {
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Готово"
          }
        }
      }
    },
    "Dumbbell" : {
      "localizations" : {
...
    },
    "Finish" : {
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Завершить"
          }
        }
      }
    },
    "Finish workout" : {
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Завершить тренировку"
          }
        }
      }
    },
    "Finish your first workout — statistics will show up here" : {
      "localizations" : {
...
    },
    "Search exercises" : {
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Поиск упражнения"
          }
        }
      }
    },
    "Secondary" : {
      "localizations" : {
...
    },
    "Start" : {
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Начать"
          }
        }
      }
    },
    "Static" : {
      "localizations" : {
...
    },
    "Workouts" : {
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Тренировки"
          }
        }
      }
    },
    "Year" : {
      "localizations" : {
...
